测试用例的编写以及README的更新

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,11 @@ endmacro(add_example_target)
 add_example_target(thread)
 add_example_target(cond)
 add_example_target(copystack)
+add_example_target(poll)
+add_example_target(specific)
+add_example_target(setenv)
+add_example_target(echosvr)
+add_example_target(echocli)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
